Complete Platform Audit and Missing Features Implementation

--- a/src/pages/database-git.astro
+++ b/src/pages/database-git.astro
@@ -1,13 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LayoutComponent from '../components/Layout';
+import ProtectedRoute from '../components/ProtectedRoute';
 import LocalDatabaseGitManager from '../components/LocalDatabaseGitManager';
 ---
 
 <Layout title="Database Git Manager - KaneDocs">
   <LayoutComponent client:load>
-    <div class="h-[calc(100vh-4rem)]">
-      <LocalDatabaseGitManager client:only="react" />
-    </div>
+    <ProtectedRoute client:load>
+      <div class="h-[calc(100vh-4rem)]">
+        <LocalDatabaseGitManager client:only="react" />
+      </div>
+    </ProtectedRoute>
   </LayoutComponent>
 </Layout>
