--- a/src/pages/editor.astro
+++ b/src/pages/editor.astro
@@ -1,13 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LayoutComponent from '../components/Layout';
+import ProtectedRoute from '../components/ProtectedRoute';
 import DocumentationEditor from '../components/DocumentationEditor';
 ---
 
 <Layout title="Documentation Editor - KaneDocs">
   <LayoutComponent client:load>
-    <div class="h-[calc(100vh-4rem)]">
-      <DocumentationEditor client:load />
-    </div>
+    <ProtectedRoute client:load>
+      <div class="h-[calc(100vh-4rem)]">
+        <DocumentationEditor client:load />
+      </div>
+    </ProtectedRoute>
   </LayoutComponent>
 </Layout>
