--- a/src/pages/version-control.astro
+++ b/src/pages/version-control.astro
@@ -1,13 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LayoutComponent from '../components/Layout';
+import ProtectedRoute from '../components/ProtectedRoute';
 import VersionControlSystem from '../components/VersionControlSystem';
 ---
 
 <Layout title="Version Control System - KaneDocs">
   <LayoutComponent client:load>
-    <div class="h-[calc(100vh-4rem)]">
-      <VersionControlSystem client:load />
-    </div>
+    <ProtectedRoute client:load>
+      <div class="h-[calc(100vh-4rem)]">
+        <VersionControlSystem client:load />
+      </div>
+    </ProtectedRoute>
   </LayoutComponent>
 </Layout>
