--- a/src/pages/ai-generator.astro
+++ b/src/pages/ai-generator.astro
@@ -1,13 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LayoutComponent from '../components/Layout';
+import ProtectedRoute from '../components/ProtectedRoute';
 import AIMarkdownGenerator from '../components/AIMarkdownGenerator';
 ---
 
 <Layout title="AI Markdown Generator - KaneDocs">
   <LayoutComponent client:load>
-    <div class="h-[calc(100vh-4rem)]">
-      <AIMarkdownGenerator client:load />
-    </div>
+    <ProtectedRoute client:load>
+      <div class="h-[calc(100vh-4rem)]">
+        <AIMarkdownGenerator client:load />
+      </div>
+    </ProtectedRoute>
   </LayoutComponent>
 </Layout>
