--- a/src/pages/git.astro
+++ b/src/pages/git.astro
@@ -1,13 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import LayoutComponent from '../components/Layout';
+import ProtectedRoute from '../components/ProtectedRoute';
 import GitManager from '../components/GitManager';
 ---
 
 <Layout title="Git Manager - KaneDocs">
   <LayoutComponent client:load>
-    <div class="h-[calc(100vh-4rem)]">
-      <GitManager client:load />
-    </div>
+    <ProtectedRoute client:load>
+      <div class="h-[calc(100vh-4rem)]">
+        <GitManager client:load />
+      </div>
+    </ProtectedRoute>
   </LayoutComponent>
 </Layout>
